# foxypack-x-twikit

./: README.md  pyproject.toml
foxypack_x_twikit/: __init__.py  answers.py  entities.py  foxyanalysis.py  foxystat.py  utils.py
tests/: conftest.py  test_entities.py  test_foxyanalysis.py  test_foxystat.py
